tests/baselines/reference/S7.8.4_A7.2_T4.errors.txt
S7.8.4_A7.2_T4.ts(15,6): error TS1125: Hexadecimal digit expected.


==== S7.8.4_A7.2_T4.ts (1 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    info: "UnicodeEscapeSequence :: u HexDigit (one, two or three time) is incorrect"
    es5id: 7.8.4_A7.2_T4
    description: ":: HexDigit :: A"
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    //CHECK#1
    "\uAA"
         
!!! error TS1125: Hexadecimal digit expected.
    